--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,14 +8,14 @@
     tools:context=".MainActivity">
 
     <android.support.constraint.Guideline
-        android:id="@+id/guideline_left"
+        android:id="@+id/guideline_left_login"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         app:layout_constraintGuide_begin="24dp" />
 
     <android.support.constraint.Guideline
-        android:id="@+id/guideline_right"
+        android:id="@+id/guideline_right_login"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
@@ -25,12 +25,12 @@
         android:id="@+id/login_app_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="80dp"
+        android:layout_marginTop="150dp"
         android:text="UniStud"
         android:textColor="#ffffff"
         android:textSize="45dp"
-        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
-        app:layout_constraintStart_toStartOf="@+id/guideline_left"
+        app:layout_constraintEnd_toStartOf="@+id/guideline_right_login"
+        app:layout_constraintStart_toStartOf="@+id/guideline_left_login"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
@@ -44,8 +44,8 @@
         android:padding="16dp"
         android:textColorHint="@color/login_form_details"
         android:textColor="@color/login_form_details"
-        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
-        app:layout_constraintStart_toStartOf="@id/guideline_left"
+        app:layout_constraintEnd_toStartOf="@+id/guideline_right_login"
+        app:layout_constraintStart_toStartOf="@id/guideline_left_login"
         app:layout_constraintTop_toBottomOf="@id/login_app_name" />
 
     <EditText
@@ -60,13 +60,13 @@
         android:inputType="textPassword"
         android:padding="16dp"
         android:textColorHint="@color/login_form_details"
-        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
-        app:layout_constraintStart_toStartOf="@id/guideline_left"
+        app:layout_constraintEnd_toStartOf="@+id/guideline_right_login"
+        app:layout_constraintStart_toStartOf="@id/guideline_left_login"
         app:layout_constraintTop_toBottomOf="@id/login_email_address" />
 
 
     <Button
-        android:id="@+id/login_button_email"
+        android:id="@+id/login_button"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -76,8 +76,8 @@
         android:text="Log In"
         android:textAllCaps="false"
         android:textColor="@color/login_form_details_medium"
-        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
-        app:layout_constraintStart_toStartOf="@id/guideline_left"
+        app:layout_constraintEnd_toStartOf="@+id/guideline_right_login"
+        app:layout_constraintStart_toStartOf="@id/guideline_left_login"
         app:layout_constraintTop_toBottomOf="@id/login_password" />
 
     <TextView
@@ -90,9 +90,9 @@
         android:text="Forgot password?"
         android:textColor="@color/login_form_details"
         android:textSize="16sp"
-        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
-        app:layout_constraintStart_toStartOf="@id/guideline_left"
-        app:layout_constraintTop_toBottomOf="@id/login_button_email" />
+        app:layout_constraintEnd_toStartOf="@+id/guideline_right_login"
+        app:layout_constraintStart_toStartOf="@id/guideline_left_login"
+        app:layout_constraintTop_toBottomOf="@id/login_button" />
 
     <View
         android:id="@+id/footer_line"
@@ -119,8 +119,8 @@
         android:layout_height="wrap_content"
         android:text="Sign in with Facebook"
         android:textColor="@color/login_form_details"
-        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
-        app:layout_constraintStart_toStartOf="@id/guideline_left"
+        app:layout_constraintEnd_toStartOf="@+id/guideline_right_login"
+        app:layout_constraintStart_toStartOf="@id/guideline_left_login"
         app:layout_constraintBottom_toTopOf="@id/login_button_google"
         android:layout_marginBottom="20dp"
         android:drawableStart="@drawable/ic_facebook"
@@ -133,8 +133,8 @@
         android:layout_height="wrap_content"
         android:text="Sign in with Google"
         android:textColor="@color/login_form_details"
-        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
-        app:layout_constraintStart_toStartOf="@id/guideline_left"
+        app:layout_constraintEnd_toStartOf="@+id/guideline_right_login"
+        app:layout_constraintStart_toStartOf="@id/guideline_left_login"
         app:layout_constraintBottom_toTopOf="@id/footer_line"
         android:layout_marginBottom="20dp"
         android:drawableStart="@drawable/ic_gmail"
@@ -146,7 +146,7 @@
         android:layout_width="120dp"
         android:layout_height="1dp"
         android:background="@color/login_form_details_medium"
-        app:layout_constraintStart_toStartOf="@id/guideline_left"
+        app:layout_constraintStart_toStartOf="@id/guideline_left_login"
         app:layout_constraintTop_toBottomOf="@id/forget_password"
         app:layout_constraintBottom_toTopOf="@id/login_button_facebook"
         app:layout_constraintHorizontal_chainStyle="spread_inside"
@@ -170,7 +170,7 @@
         android:layout_height="1dp"
         android:background="@color/login_form_details_medium"
         app:layout_constraintBottom_toBottomOf="@id/or"
-        app:layout_constraintEnd_toEndOf="@id/guideline_right"
+        app:layout_constraintEnd_toEndOf="@id/guideline_right_login"
         app:layout_constraintStart_toEndOf="@id/or"
         app:layout_constraintTop_toTopOf="@id/or"
         />
