--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -27,7 +27,7 @@
         android:id="@+id/login_app_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="150dp"
+        android:layout_marginTop="100dp"
         android:text="UniStud"
         android:textColor="#ffffff"
         android:textSize="45dp"
@@ -36,10 +36,25 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/signup_email_address"
+        android:id="@+id/signup_user_fullname"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
+        android:background="@drawable/edit_text_bg"
+        android:hint="Full name"
+        android:inputType="text"
+        android:padding="16dp"
+        android:textColorHint="@color/login_form_details"
+        android:textColor="@color/login_form_details"
+        app:layout_constraintEnd_toStartOf="@+id/guideline_right_signup"
+        app:layout_constraintStart_toStartOf="@id/guideline_left_signup"
+        app:layout_constraintTop_toBottomOf="@id/login_app_name" />
+
+    <EditText
+        android:id="@+id/signup_email_address"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
         android:background="@drawable/edit_text_bg"
         android:hint="Email address"
         android:inputType="textEmailAddress"
@@ -48,7 +63,7 @@
         android:textColor="@color/login_form_details"
         app:layout_constraintEnd_toStartOf="@+id/guideline_right_signup"
         app:layout_constraintStart_toStartOf="@id/guideline_left_signup"
-        app:layout_constraintTop_toBottomOf="@id/login_app_name" />
+        app:layout_constraintTop_toBottomOf="@id/signup_user_fullname" />
 
     <EditText
         android:id="@+id/signup_password1"
@@ -80,6 +95,35 @@
         app:layout_constraintStart_toStartOf="@id/guideline_left_signup"
         app:layout_constraintTop_toBottomOf="@id/signup_password1" />
 
+    <RadioGroup
+        android:id="@+id/account_type"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginTop="16dp"
+        android:textColor="@color/login_form_details"
+        android:padding="16dp"
+        app:layout_constraintEnd_toStartOf="@+id/guideline_right_signup"
+        app:layout_constraintStart_toStartOf="@id/guideline_left_signup"
+        app:layout_constraintTop_toBottomOf="@id/signup_password2">
+
+        <RadioButton
+            android:id="@+id/radioButton1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/login_form_details"
+            android:layout_weight="1"
+            android:text="Student" />
+
+        <RadioButton
+            android:id="@+id/radioButton2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/login_form_details"
+            android:layout_weight="1"
+            android:text="Organization" />
+    </RadioGroup>
+
     <Button
         android:id="@+id/signup_button"
         android:layout_width="0dp"
@@ -93,7 +137,8 @@
         android:textColor="@color/login_form_details_medium"
         app:layout_constraintEnd_toStartOf="@+id/guideline_right_signup"
         app:layout_constraintStart_toStartOf="@id/guideline_left_signup"
-        app:layout_constraintTop_toBottomOf="@id/signup_password2" />
+        app:layout_constraintBottom_toTopOf="@id/footer_line"
+        app:layout_constraintTop_toBottomOf="@id/account_type" />
 
     <View
         android:id="@+id/footer_line_signup"
@@ -102,6 +147,7 @@
         android:layout_margin="50dp"
         android:background="#fff"
         app:layout_constraintBottom_toBottomOf="parent" />
+
 
     <TextView
         android:id="@+id/signup_sign_in_button"
