--- a/app/src/main/res/layout/activity_organization_add_internship.xml
+++ b/app/src/main/res/layout/activity_organization_add_internship.xml
@@ -1,6 +1,92 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".Activities.OrganizationAddInternship"
+    android:orientation="vertical">
 
-</android.support.constraint.ConstraintLayout>
+    <ImageButton
+        android:id="@+id/internship_image_select"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:paddingTop="10dp"
+        android:adjustViewBounds="true"
+        android:background="#ffffff"
+        android:scaleType="centerCrop"
+        android:src="@drawable/add_image" />
+
+    <EditText
+        android:id="@+id/internship_title_field"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/internship_image_select"
+        android:layout_centerHorizontal="true"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/input_background"
+        android:hint="Internship Title ..."
+        android:padding="15dp"
+        android:singleLine="true" />
+
+    <EditText
+        android:id="@+id/internship_desc_field"
+        android:layout_width="match_parent"
+        android:layout_height="120dp"
+        android:layout_below="@+id/internship_title_field"
+        android:layout_centerHorizontal="true"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginRight="20dp"
+        android:background="@drawable/input_background"
+        android:ems="10"
+        android:hint="Internship Description ..."
+        android:inputType="textMultiLine"
+        android:padding="15dp" />
+
+
+    <LinearLayout
+        android:id="@+id/event_date_group"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_below="@id/internship_desc_field"
+        android:orientation="horizontal"
+        >
+
+        <TextView
+            android:id="@+id/internship_pick_date"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:hint=" Set The Date"
+            android:layout_weight="1"
+            android:ems="10"/>
+
+        <ImageButton
+            android:id="@+id/internshipDateButton"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:layout_gravity="center"
+            android:layout_marginRight="10dp"
+            android:background="@drawable/add"/>
+
+    </LinearLayout>
+
+
+
+    <Button
+        android:id="@+id/submitBtn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:background="@color/colorPrimary"
+        android:text="SUBMIT POST"
+        android:textColor="#ffffff" />
+
+</RelativeLayout>
