--- a/app/src/main/res/layout/activity_organization_event_profile.xml
+++ b/app/src/main/res/layout/activity_organization_event_profile.xml
@@ -166,15 +166,15 @@
 
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
-            android:orientation="horizontal">
+            android:orientation="vertical">
 
             <Button
                 android:id="@+id/organization_event_profile_done"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/profileHeadings"
                 android:text="Edit"
@@ -182,7 +182,7 @@
 
             <Button
                 android:id="@+id/organization_event_profile_delete"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/purple"
                 android:text="Delete"
