--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,6 +11,7 @@
     <color name="login_form_details_medium">#66ffffff</color>
 
     <color name="grayColor">#c2c2c2</color>
+    <color name="green">#3CB371</color>
 
     <!-- Event Profile Colors -->
     <color name="profilePrimary">#49BEFF</color>
