--- a/app/src/main/res/layout/activity_organization_event_profile.xml
+++ b/app/src/main/res/layout/activity_organization_event_profile.xml
@@ -129,7 +129,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:fontFamily="sans-serif-light"
-                        android:text="Date:"
+                        android:text="Deadline:"
                         android:textSize="13sp"
                         android:textColor="@color/profileHeadings"/>
 
