--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -49,37 +49,45 @@
         app:layout_constraintStart_toStartOf="@id/guideline_left_login"
         app:layout_constraintTop_toBottomOf="@id/forgot_app_name" />
 
+
     <Button
         android:id="@+id/reset_password_button"
-        android:layout_width="0dp"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
-        android:background="@drawable/login_button_bg"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="24dp"
+        android:background="@drawable/button_message_background"
+        android:foreground="?android:attr/selectableItemBackground"
         android:text="Reset password"
-        android:textAllCaps="false"
-        android:textColor="@color/login_form_details_medium"
+        android:textColor="#fff"
+        android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toStartOf="@+id/guideline_right_login"
         app:layout_constraintStart_toStartOf="@id/guideline_left_login"
-        app:layout_constraintTop_toBottomOf="@id/forgot_email_address" />
-
+        app:layout_constraintTop_toBottomOf="@id/forgot_email_address"
+        app:layout_constraintVertical_bias="0.0" />
 
 
     <Button
         android:id="@+id/back_reset_password_button"
-        android:layout_width="0dp"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
-        android:background="@drawable/login_button_bg"
-        android:text="Back"
-        android:textAllCaps="false"
-        android:textColor="@color/login_form_details_medium"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="24dp"
+        android:background="@drawable/button_message_background"
+        android:foreground="?android:attr/selectableItemBackground"
+        android:text="Reset password"
+        android:textColor="#fff"
+        android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toStartOf="@+id/guideline_right_login"
         app:layout_constraintStart_toStartOf="@id/guideline_left_login"
-        app:layout_constraintTop_toBottomOf="@id/reset_password_button" />
+        app:layout_constraintTop_toBottomOf="@id/reset_password_button"
+        app:layout_constraintVertical_bias="0.0" />
 
 
 </android.support.constraint.ConstraintLayout>
