--- a/app/src/main/res/layout/activity_organization_event_profile.xml
+++ b/app/src/main/res/layout/activity_organization_event_profile.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".Activities.OrganizationEventProfile">
 
     <RelativeLayout
@@ -68,10 +68,10 @@
                 android:id="@+id/organization_event_profile_content"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="30dp"
                 android:layout_marginTop="20dp"
                 android:layout_marginRight="30dp"
-                android:orientation="vertical"
-                android:layout_marginLeft="30dp">
+                android:orientation="vertical">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -83,17 +83,17 @@
                         android:layout_height="wrap_content"
                         android:fontFamily="sans-serif-light"
                         android:text="Description:"
-                        android:textSize="13sp"
-                        android:textColor="@color/profileHeadings"/>
+                        android:textColor="@color/profileHeadings"
+                        android:textSize="13sp" />
 
                     <EditText
                         android:id="@+id/organization_event_profile_desc"
                         android:layout_width="match_parent"
                         android:layout_height="80dp"
                         android:fontFamily="sans-serif-light"
-                        android:textSize="18sp"
                         android:inputType="textMultiLine"
-                        android:textColor="#000000" />
+                        android:textColor="#000000"
+                        android:textSize="18sp" />
 
                 </LinearLayout>
 
@@ -107,16 +107,16 @@
                         android:layout_height="wrap_content"
                         android:fontFamily="sans-serif-light"
                         android:text="Location:"
-                        android:textSize="13sp"
-                        android:textColor="@color/profileHeadings"/>
+                        android:textColor="@color/profileHeadings"
+                        android:textSize="13sp" />
 
                     <EditText
                         android:id="@+id/organization_event_profile_loc"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:fontFamily="sans-serif-light"
-                        android:textSize="18sp"
-                        android:textColor="#000000" />
+                        android:textColor="#000000"
+                        android:textSize="18sp" />
 
                 </LinearLayout>
 
@@ -130,25 +130,24 @@
                         android:layout_height="wrap_content"
                         android:fontFamily="sans-serif-light"
                         android:text="Deadline:"
-                        android:textSize="13sp"
-                        android:textColor="@color/profileHeadings"/>
+                        android:textColor="@color/profileHeadings"
+                        android:textSize="13sp" />
 
                     <LinearLayout
                         android:id="@+id/event_date_group"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="10dp"
                         android:layout_below="@id/event_location_field"
-                        android:orientation="horizontal"
-                        >
+                        android:layout_marginTop="10dp"
+                        android:orientation="horizontal">
 
                         <TextView
                             android:id="@+id/event_pick_date"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
-                            android:hint="Set The Date"
                             android:layout_weight="1"
-                            android:ems="10"/>
+                            android:ems="10"
+                            android:hint="Set The Date" />
 
                         <ImageButton
                             android:id="@+id/eventDateButton"
@@ -156,7 +155,7 @@
                             android:layout_height="25dp"
                             android:layout_gravity="center"
                             android:layout_marginRight="10dp"
-                            android:background="@drawable/add"/>
+                            android:background="@drawable/add" />
 
                     </LinearLayout>
 
@@ -169,24 +168,49 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="113dp"
             android:orientation="vertical">
 
             <Button
                 android:id="@+id/organization_event_profile_done"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/profileHeadings"
-                android:text="Edit"
-                android:textColor="#ffffff"/>
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="0dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginBottom="0dp"
+                android:background="@drawable/button_message_background"
+                android:foreground="?android:attr/selectableItemBackground"
+                android:text="SAVE"
+                android:textColor="#fff"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.51"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintVertical_bias="0.0" />
 
             <Button
                 android:id="@+id/organization_event_profile_delete"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/purple"
-                android:text="Delete"
-                android:textColor="#ffffff"/>
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginBottom="8dp"
+                android:background="@drawable/button_message_background"
+                android:foreground="?android:attr/selectableItemBackground"
+                android:text="DELETE"
+                android:textColor="#fff"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.51"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintVertical_bias="0.0" />
+
         </LinearLayout>
     </RelativeLayout>
 </RelativeLayout>
