--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -126,19 +126,25 @@
 
     <Button
         android:id="@+id/signup_button"
-        android:layout_width="0dp"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
-        android:background="@drawable/login_button_bg"
-        android:text="Sign Up"
-        android:textAllCaps="false"
-        android:textColor="@color/login_form_details_medium"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="24dp"
+        android:background="@drawable/button_message_background"
+        android:foreground="?android:attr/selectableItemBackground"
+        android:text="REGISTER"
+        android:textColor="#fff"
+        android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toStartOf="@+id/guideline_right_signup"
         app:layout_constraintStart_toStartOf="@id/guideline_left_signup"
-        app:layout_constraintBottom_toTopOf="@id/footer_line"
-        app:layout_constraintTop_toBottomOf="@id/account_type" />
+        app:layout_constraintBottom_toTopOf="@id/footer_line_signup"
+        app:layout_constraintTop_toBottomOf="@id/account_type"
+        app:layout_constraintVertical_bias="0.0" />
+
+
 
     <View
         android:id="@+id/footer_line_signup"
