--- a/app/src/main/res/layout/activity_student_add_tutorial.xml
+++ b/app/src/main/res/layout/activity_student_add_tutorial.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".Activities.StudentAddTutorial"
     android:orientation="vertical">
 
@@ -64,15 +65,27 @@
     </LinearLayout>
 
 
-
     <Button
         android:id="@+id/submitTBtn"
-        android:layout_width="match_parent"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:background="@color/colorPrimary"
-        android:text="SUBMIT POST"
-        android:textColor="#ffffff" />
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="349dp"
+        android:background="@drawable/button_message_background"
+        android:foreground="?android:attr/selectableItemBackground"
+        android:text="Add Tutorial"
+        android:textColor="#fff"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.51"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/edit_profile"
+        app:layout_constraintVertical_bias="0.0" />
 
 </RelativeLayout>
