--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -54,10 +54,9 @@
         android:id="@+id/reset_password_button"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="60dp"
+        android:layout_marginEnd="8dp"
         android:background="@drawable/button_message_background"
         android:foreground="?android:attr/selectableItemBackground"
         android:text="Reset password"
@@ -65,19 +64,18 @@
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toStartOf="@+id/guideline_right_login"
+        app:layout_constraintHorizontal_bias="0.489"
         app:layout_constraintStart_toStartOf="@id/guideline_left_login"
-        app:layout_constraintTop_toBottomOf="@id/forgot_email_address"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toBottomOf="@id/forgot_email_address" />
 
 
     <Button
         android:id="@+id/back_reset_password_button"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="8dp"
         android:background="@drawable/button_message_background"
         android:foreground="?android:attr/selectableItemBackground"
         android:text="Reset password"
@@ -85,9 +83,9 @@
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toStartOf="@+id/guideline_right_login"
+        app:layout_constraintHorizontal_bias="0.51"
         app:layout_constraintStart_toStartOf="@id/guideline_left_login"
-        app:layout_constraintTop_toBottomOf="@id/reset_password_button"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toBottomOf="@id/reset_password_button" />
 
 
 </android.support.constraint.ConstraintLayout>
